Add postgres repositories and unit tests